add shells to Dockerfile and cli dependency